--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   dynamic_color: ^1.6.8
   firebase_auth: ^4.15.0
-  super_drag_and_drop: ^0.7.3
+  super_drag_and_drop: ^0.8.0
+  super_clipboard: ^0.8.0
   file_picker: ^6.1.1
   path_provider: ^2.1.1
   url_launcher: ^6.2.2
