--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: passaround
-description: A new Flutter project.
+description: An app to help you pass around text, files, and images, between your devices.
 publish_to: 'none'
 
-version: 1.1.4+6
+version: 1.0.0+7
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
