--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   path_provider: ^2.1.1
   url_launcher: ^6.2.2
   firebase_storage: ^11.5.6
+  flutter_svg: ^2.0.9
 
   flutter_web_plugins:
     sdk: flutter
