--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   url_launcher: ^6.2.2
   firebase_storage: ^11.5.6
   flutter_svg: ^2.0.9
+  flutter_secure_storage: ^9.0.0
 
   flutter_web_plugins:
     sdk: flutter
